[gd_scene load_steps=13 format=3 uid="uid://4v0berpltptx"]

[ext_resource type="Theme" uid="uid://ejfrgkwo0174" path="res://scenes/ui/game_ui_theme.tres" id="1_inism"]
[ext_resource type="Script" path="res://scenes/ui/tools_panel.gd" id="2_0lv4c"]
[ext_resource type="Texture2D" uid="uid://dxjq7jk0eyv2s" path="res://assets/game/objects/basic_tools_and_meterials.png" id="2_nexbq"]
[ext_resource type="Texture2D" uid="uid://biqhj0jeusk1h" path="res://assets/game/objects/basic_plants.png" id="3_11j6l"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mco6h"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ix4uk"]
atlas = SubResource("CompressedTexture2D_mco6h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hujv"]
atlas = ExtResource("2_nexbq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_aei8g"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_h81be"]
atlas = SubResource("CompressedTexture2D_aei8g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu5s7"]
atlas = ExtResource("3_11j6l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s88mn"]
load_path = "res://.godot/imported/basic_plants.png-95b9b15040aa30969080ee5e6985e7ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qncmt"]
atlas = SubResource("CompressedTexture2D_s88mn")
region = Rect2(0, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 42.0
offset_bottom = 45.0
theme = ExtResource("1_inism")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_0lv4c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ix4uk")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_5hujv")
icon_alignment = 1

[node name="ToolWateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_h81be")
icon_alignment = 1

[node name="ToolCorn" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_pu5s7")
icon_alignment = 1

[node name="ToolTomato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
focus_mode = 1
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_qncmt")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolWateringCan" to="." method="_on_tool_watering_can_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCorn" to="." method="_on_tool_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTomato" to="." method="_on_tool_tomato_pressed"]
